# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import feedbacksRouter from "./feedbacks";
+import callbacksRouter from "./callbacks";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(feedbacksRouter);
+router.use(callbacksRouter);
 
 export default router;
